# libimsg

./: LICENSE  README.md  imsg-buffer.c  imsg.c  imsg.h  meson.build  meson.options
lua/: imsg_lua.c  imsg_test.lua  meson.build
