option('lua', type : 'combo', choices : ['false', 'luajit', 'lua5.3', 'lua5.4'], value : 'false')
option('lua-module-directory', type : 'string', value : '', description : 'override lua C module directory')
option('lua-only', type : 'boolean', value : false)
option('lua-static', type : 'boolean', value : false)

